--- a/src/app/pages/tpa-login/tpa-login.html
+++ b/src/app/pages/tpa-login/tpa-login.html
@@ -1,50 +1,29 @@
-<!--<ba-card title="Tpa Login">-->
-<!--<h1>der fisch</h1>-->
-<!--</ba-card>-->
-
-<ba-card class="col-xs-12">
-  <form [formGroup]="form" (ngSubmit)="onSubmit(form.value)" class="form-horizontal">
-    <div class="form-group row"
-         [ngClass]="{'has-error': (!email.valid && email.touched), 'has-success': (email.valid && email.touched)}">
-      <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-
-      <div class="col-sm-10">
-        <input [formControl]="email" type="email" class="form-control" id="inputEmail3" placeholder="Email">
+<div class="row">
+  <ba-card>
+    <form [formGroup]="form" (ngSubmit)="onSubmit(form.value)">
+      <div class="form-group has-feedback"
+           [ngClass]="{'has-error': (!username.valid && username.touched), 'has-success': (username.valid && username.touched)}">
+        <label for="username" class="control-label">Username</label>
+        <input [formControl]="username" type="text" class="form-control" id="username" placeholder="Username">
+        <i *ngIf="username.touched" class="form-control-feedback"
+           [ngClass]="{'ion-checkmark-circled': username.valid, 'ion-android-cancel': !username.valid}"></i>
+        <span *ngIf="username.touched" class="sr-only">(success)</span>
       </div>
-    </div>
-    <div class="form-group row"
-         [ngClass]="{'has-error': (!password.valid && password.touched), 'has-success': (password.valid && password.touched)}">
-      <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
 
-      <div class="col-sm-10">
-        <input [formControl]="password" type="password" class="form-control" id="inputPassword3" placeholder="Password">
+      <div class="form-group has-feedback"
+           [ngClass]="{'has-error': (!password.valid && password.touched), 'has-success': (password.valid && password.touched)}">
+        <label for="password" class="control-label">Password</label>
+        <input [formControl]="password" type="password" class="form-control" id="password"
+               placeholder="Password">
+        <i *ngIf="password.touched" class="form-control-feedback"
+           [ngClass]="{'ion-checkmark-circled': password.valid, 'ion-android-cancel': !password.valid}"></i>
+        <span *ngIf="password.touched" class="sr-only">(success)</span>
       </div>
-    </div>
-    <div class="form-group row">
-      <div class="offset-sm-2 col-sm-10">
+
+      <div class="form-group">
         <button [disabled]="!form.valid" type="submit" class="btn btn-default btn-auth">Sign in</button>
       </div>
-    </div>
-  </form>
-</ba-card>
 
-<!--<ba-card title="Please Enter your Credentials">-->
-  <!--<form [formGroup]="form" (ngSubmit)="onSubmit(form.value)" class="form-horizontal">-->
-    <!--<div class="form-group row"-->
-         <!--[ngClass]="{'has-error': (!email.valid && email.touched), 'has-success': (email.valid && email.touched)}">-->
-      <!--<label for="inputEmail3" class="col-sm-2 control-label">Email</label>-->
-
-      <!--<div class="col-sm-10">-->
-        <!--<input [formControl]="email" type="email" class="form-control" id="inputEmail3" placeholder="Email">-->
-      <!--</div>-->
-    <!--</div>-->
-    <!--<div class="form-group row"-->
-         <!--[ngClass]="{'has-error': (!password.valid && password.touched), 'has-success': (password.valid && password.touched)}">-->
-      <!--<label for="inputPassword3" class="col-sm-2 control-label">Password</label>-->
-
-      <!--<div class="col-sm-10">-->
-        <!--<input [formControl]="password" type="password" class="form-control" id="inputPassword3" placeholder="Password">-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</form>-->
-<!--</ba-card>-->
+    </form>
+  </ba-card>
+</div>
