--- a/src/app/pages/tpa-trade-overview/tpa-trade-overview.html
+++ b/src/app/pages/tpa-trade-overview/tpa-trade-overview.html
@@ -1,7 +1,9 @@
-<div class="button-wrapper">
-  <button type="button" class="btn btn-default" (click)="loadTrades()">Load Trades</button>
-</div>
+<ul class="btn-list clearfix">
+  <li>
+    <button type="button" class="btn btn-default" (click)="loadTrades()">Load Trades</button>
+  </li>
 
-<div class="button-wrapper">
-  <button type="button" class="btn btn-default" (click)="getLegalEntity()">Get Legal Entity</button>
-</div>
+  <li>
+    <button type="button" class="btn btn-default" (click)="getLegalEntity()">Get Legal Entity</button>
+  </li>
+</ul>
