--- a/src/app/pages/tpa-notifications/tpa-notifications.html
+++ b/src/app/pages/tpa-notifications/tpa-notifications.html
@@ -1,14 +1,26 @@
 <div id="raw">
-  <button class="btn btn-primary" (click)="onClick()">Send Test Message</button>
   <h2>Messages</h2>
-  <p>{{count}} total</p>
+  <!--<p>{{count}} total</p>-->
 
-  <h3 *ngIf="count">Latest:</h3>
-  <pre>{{messages | async}}</pre>
+  <!--<h3 *ngIf="count">Latest:</h3>-->
+  <!--<pre>{{messages | async}}</pre>-->
 
-  <h3 *ngIf="mq.length">History:</h3>
-  <ol>
-    <li *ngFor="let m of mq">{{m}}</li>
-  </ol>
+  <!--<h3 *ngIf="mq.length">History:</h3>-->
+  <!--<ol>-->
+    <!--<li *ngFor="let m of mq">{{m}}</li>-->
+  <!--</ol>-->
+
+  <section id="main">
+
+    <h3>Latest:</h3>
+    <pre>{{lastMessage() | async}}</pre>
+
+    <h3>History:</h3>
+    <ul>
+      <li *ngFor="let message of messages() | async">
+        {{message}}
+      </li>
+    </ul>
+  </section>
 
 </div>
