--- a/src/app/theme/components/baPageTop/baPageTop.html
+++ b/src/app/theme/components/baPageTop/baPageTop.html
@@ -3,23 +3,34 @@
   <a routerLink="/pages/dashboard" class="al-logo clearfix"><span>TPA-</span>ProofOfConcept</a>
   <a href (click)="toggleMenu()" class="collapse-menu-link ion-navicon"></a>
 
-  <div class="search">
-    <i class="ion-ios-search-strong" ng-click="startSearch()"></i>
-    <input id="searchInput" type="text" placeholder="Search for...">
+  <!--<div class="search">-->
+  <!--<i class="ion-ios-search-strong" ng-click="startSearch()"></i>-->
+  <!--<input id="searchInput" type="text" placeholder="Search for...">-->
+  <!--</div>-->
+
+  <!--<div class="search">-->
+    <!--<p><span id="status"> {{state|async}} </span></p>-->
+  <!--</div>-->
+
+  <div *ngIf="!isLoggedIn()" class="login clearfix">
+    <a href="javascript:void(0)" (click)="login()"><i class="fa fa-sign-in"></i>Login</a>
   </div>
 
-  <div class="user-profile clearfix">
+  <div *ngIf="isLoggedIn()" class="user-profile clearfix">
     <div class="dropdown al-user-profile">
-      <a class="profile-toggle-link dropdown-toggle" id="user-profile-dd" data-toggle="dropdown" aria-expanded="false">
+      <a class="profile-toggle-link dropdown-toggle" id="user-profile-dd" data-toggle="dropdown"
+         aria-expanded="false">
         <img src="{{ ( 'Nasta' | baProfilePicture ) }}">
       </a>
       <ul class="dropdown-menu top-dropdown-menu profile-dropdown" aria-labelledby="user-profile-dd">
         <li class="dropdown-item"><i class="dropdown-arr"></i></li>
         <li class="dropdown-item"><a href><i class="fa fa-user"></i>Profile</a></li>
         <li class="dropdown-item"><a href><i class="fa fa-cog"></i>Settings</a></li>
-        <li class="dropdown-item"><a href class="signout"><i class="fa fa-power-off"></i>Sign out</a></li>
+        <li class="dropdown-item"><a href="javascript:void(0)" class="signout" (click)="logout()"><i
+          class="fa fa-power-off"></i>Sign out</a></li>
       </ul>
     </div>
     <ba-msg-center></ba-msg-center>
   </div>
 </div>
+
