--- a/src/app/pages/tpa-trade-overview/tpa-trade-overview.html
+++ b/src/app/pages/tpa-trade-overview/tpa-trade-overview.html
@@ -13,5 +13,5 @@
 </ul>
 
 <div class="row">
-  <ng2-smart-table [settings]="settings" [source]="source" (deleteConfirm)="onDeleteConfirm($event)"></ng2-smart-table>
+  <ng2-smart-table [settings]="settings" [source]="source"></ng2-smart-table>
 </div>
